add new product's / Create-Responsive-Animated-Login-Form-Page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <input type="text" placeholder="Username">
             </div>
             <div class="inputBox">
-                <input type="text" placeholder="Password">
+                <input type="password" placeholder="Password">
             </div>
             <div class="inputBox">
                 <input type="submit" placeholder="Sign in">
